debug
tokenizer.c: In function ‘print_tokens’:
tokenizer.c:57:3: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘token_t’ [-Werror=format=]
   printf("\"%s\"\n", tokens->tokens[i]);
   ^
tokenizer.c: In function ‘tokenize’:
tokenizer.c:192:2: error: ISO C90 forbids mixed declarations and code [-Werror=pedantic]
  unsigned i, j;
  ^
cc1: all warnings being treated as errors
main.c: In function ‘main’:
main.c:71:3: error: passing argument 1 of ‘execute’ from incompatible pointer type [-Werror]
   execute(tokens.tokens, envp);
   ^
main.c:27:6: note: expected ‘char **’ but argument is of type ‘struct token_t *’
 void execute(char **argv, env_t *envp)
      ^
cc1: all warnings being treated as errors
make: *** [all] Error 1
